Closed Bug 1022577 Opened 11 years ago Closed 11 years ago

[Homescreen] In vertical version, user could not tap app correctly when scroll screen down to button and tap home button while flywheel scrolling

Categories

(Core :: Panning and Zooming, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla33
blocking-b2g 2.0+
Tracking Status
firefox31 --- unaffected
firefox32 --- fixed
firefox33 --- fixed
b2g-v2.0 --- fixed
b2g-v2.1 --- verified

People

(Reporter: ashiue, Assigned: kats)

References

Details

(Whiteboard: [systemsfe])

Attachments

(6 files)

Attached file homescreen_issue.log
Testing information: Gaia 2e5636e852a9354a5f8072b179cf16f72647cfd6 Gecko https://hg.mozilla.org/mozilla-central/rev/8bd92dc9ef59 BuildID 20140608160201 Version 32.0a1 STR: 1. Set homescreen as vertical version 2. scroll screen down to button and tap home button multiple times 3. Try to click message app icon Expected result: Message app launch successfully Actural result: no response at first, and try tap screen multiple times, bring up camera app
Attached video homescreen_issue.mp4
Blocks: 1015336
We prevent the click event during scrolling and it is recovered 300ms after receiving the last scroll event (bug 1015000). We don't know which is the time between scroll events and how verbose is.. so we added an asynchronous method that will listen for click events once that the scroll finishes + 300ms. If someone has better solution without touching Gecko, please assign this bug.
Whiteboard: [systemsfe]
No need to tap the home multiple time. Once was enough for me (tested 3/3 times), as long as you tap before the end of flywheel scrolling animation. It seems that tapping an icon seems to tap to the icon below (browser launch Camera for instance).
Summary: [Homescreen] In vertical version, user could not tap app correctly when scroll screen down to button and tap home button multiple times → [Homescreen] In vertical version, user could not tap app correctly when scroll screen down to button and tap home button while flywheel scrolling
QA Whiteboard: [VH-FL-blocking+]
blocking-b2g: --- → 2.0?
Per discussion with tchung, ctalbert, and lucas, a FL blocker must be a broken use case, so this isn't a blocker.
QA Whiteboard: [VH-FL-blocking+] → [VH-FL-blocking-]
QA Whiteboard: [VH-FL-blocking-] → [VH-FL-blocking-][VH-FC-blocking+]
I think this is a possible scrolling issue.
Component: Gaia::Homescreen → Panning and Zooming
Product: Firefox OS → Core
Blocking as we are launching the wrong app here
blocking-b2g: 2.0? → 2.0+
Attached patch PatchSplinter Review
When canceling the animation we were sending a paint request with wrong coordinates, and that was causing bad state to be saved into APZCCallbackHelper's CallbackTransform stuff. The taps were then getting transformed incorrectly until the next time we triggered a repaint request and put the values back in sync.
Assignee: nobody → bugmail.mozilla
Attachment #8438679 - Flags: review?(botond)
Attachment #8438679 - Flags: review?(botond) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
Verified in today's pvt build. Messages can be tapped again.
Status: RESOLVED → VERIFIED
This issue has been verified successfully on Flame 2.1. See attachment: Verify_Video_Flame2.1.MP4 Reproducing rate: 0/10 Flame 2.1 version: Gaia-Rev ccb49abe412c978a4045f0c75abff534372716c4 Gecko-Rev https://hg.mozilla.org/releases/mozilla-b2g34_v2_1/rev/18fb67530b22 Build-ID 20141130001203 Version 34.0 This bug has been verified to fail on Flame 2.0. See attachment: Verify_Video_Flame2.0.MP4 & logcat.txt, Reproducing rate: 10/10 Occurrence time:17:33 Issue steps: 1. scroll screen down to button and tap home button multiple times 2. Try to click message app icon Expected result: Message app launch successfully. Actural result: Bring up other application. Flame 2.0 version: Gaia-Rev 8d1e868864c8a8f1e037685f0656d1da70d08c06 Gecko-Rev https://hg.mozilla.org/releases/mozilla-b2g32_v2_0/rev/c756bd8bf3c3 Build-ID 20141130000204 Version 32.0
Flags: needinfo?(hlu)
Attached file logcat.txt
Add NI?whsu to follow up
Flags: needinfo?(hlu) → needinfo?(whsu)
It looks like that v2.0 branch still can reproduce this bug. I have submitted a follow-up. Thanks everyone!
Flags: needinfo?(whsu)
See Also: → 1119177
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: