Bug 1022577 - Ensure we flush the repaint _after_ taking the scroll offset from content. r=botond, a=2.0+